Drop string templates because it will be removes as preview in Java 23