@@ -4,5 +4,5 @@ TODO
 ## Building native image
 
 ```
-MAVEN_OPTS="--enable-preview" quarkus build --native
+quarkus build --native
 ```
